creating hard endpoint for start date

--- a/personal_webapp/docker-compose.yml
+++ b/personal_webapp/docker-compose.yml
@@ -9,7 +9,7 @@ services:
     ports:
       - "8000:8000"
       
-    command: celery -A core worker -l INFO
+    command: ["sh", "./run.sh"]
 
     depends_on:
       - pgdb
