kafka section added to communicate with airflow

--- a/airflow/Dockerfile
+++ b/airflow/Dockerfile
@@ -1,6 +1,11 @@
 ARG PYTHON_VERSION=3.10
 
-FROM airflow:${AIRFLOW_IMAGE_NAME:-apache/airflow:2.7.3}
+FROM apache/airflow:2.7.3
+
+COPY requirements.txt /requirements.txt
+
+RUN pip install --user --upgrade pip
+RUN pip install --no-cache-dir --user -r /requirements.txt
 
 ENV PYTHONBUFFERED = 1
 
