--- a/personal_webapp/docker-compose.yml
+++ b/personal_webapp/docker-compose.yml
@@ -56,4 +56,26 @@ services:
       - RABBITMQ_DEFUALT_USER=guest
       - RABBITMQ_DEFUALT_PASS=guest
 
+  zookeeper:
+    image: zookeeper:latest
+    ports:
+     - "2181:2181"
+  kafka:
+    image: wurstmeister/kafka:2.12-2.5.0
+    ports:
+     - "9092:9092"
+    expose:
+     - "9093"
+    environment:
+      KAFKA_ADVERTISED_LISTENERS: INSIDE://kafka:9093,OUTSIDE://localhost:9092
+      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: INSIDE:PLAINTEXT,OUTSIDE:PLAINTEXT
+      KAFKA_LISTENERS: INSIDE://:9093,OUTSIDE://:9092
+      KAFKA_INTER_BROKER_LISTENER_NAME: INSIDE
+      KAFKA_ZOOKEEPER_CONNECT: "zookeeper"
+      KAFKA_CREATE_TOPICS: "wisdomise_broker:1:1"
+    volumes:
+     - /var/run/docker.sock:/var/run/docker.sock
+
+
+
 
