--- a/personal_webapp/docker-compose.yml
+++ b/personal_webapp/docker-compose.yml
@@ -59,27 +59,27 @@ services:
       - RABBITMQ_DEFUALT_PASS=guest
 
   zookeeper:
-    image: zookeeper:latest
-    ports:
-     - "2181:2181"
-  kafka:
-    image: wurstmeister/kafka:2.12-2.5.0
-    ports:
-     - "9092:9092"
-    expose:
-     - "9093"
+    image: confluentinc/cp-zookeeper:latest
     environment:
-      KAFKA_ADVERTISED_LISTENERS: INSIDE://kafka:9093,OUTSIDE://localhost:9092
-      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: INSIDE:PLAINTEXT,OUTSIDE:PLAINTEXT
-      KAFKA_LISTENERS: INSIDE://:9093,OUTSIDE://:9092
-      KAFKA_INTER_BROKER_LISTENER_NAME: INSIDE
-      KAFKA_ZOOKEEPER_CONNECT: "zookeeper"
+      ZOOKEEPER_CLIENT_PORT: 2181
+      ZOOKEEPER_TICK_TIME: 2000
+    ports:
+      - 22181:2181
+  
+  kafka:
+    image: confluentinc/cp-kafka:latest
+    depends_on:
+      - zookeeper
+    ports:
+      - 29092:29092
+    environment:
+      KAFKA_BROKER_ID: 1
+      KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
+      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:9092,PLAINTEXT_HOST://localhost:29092
+      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT
+      KAFKA_INTER_BROKER_LISTENER_NAME: PLAINTEXT
+      KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
       KAFKA_CREATE_TOPICS: "wisdomise_broker:1:1"
     volumes:
      - /var/run/docker.sock:/var/run/docker.sock
-networks:
-  shared_net:
-    driver: bridge 
-
-
 
